--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
