--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "mockjs": "^1.1.0",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
