--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "mockjs": "^1.1.0",
+    "querystring": "^0.2.1",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
