--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "axios": "^1.5.0",
     "mockjs": "^1.1.0",
     "querystring": "^0.2.1",
-    "sass": "^1.66.1",
-    "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "highlight.js": "^10.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2"
   }
 }
