--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "highlight.js": "^10.5.0",
     "mockjs": "^1.1.0",
+    "pinia": "^2.1.6",
     "querystring": "^0.2.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "highlight.js": "^10.5.0"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.5",
+    "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.66.1",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^13.3.2",
+    "vite": "^4.4.5"
   }
 }
